# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.7
#

2005-02-21 17:03:36 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-22

    Summary:
      simplify Luis patch, use get_abspath
    Revision:
      itools--main--0.7--patch-22


    modified files:
     Changelog __init__.py


2005-02-21 16:56:56 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-21

    Summary:
      merge from Luis branch (itools.__arch_revision__)
    Revision:
      itools--main--0.7--patch-21

    Patches applied:
    
     * luis@itaapy.com--private/itools--luis--0.7--patch-6
       Allow to ask for the __arch_revision__ to the itools instance.
    

    modified files:
     Changelog __init__.py

    new patches:
     luis@itaapy.com--private/itools--luis--0.7--patch-6


2005-02-21 08:37:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-20

    Summary:
      merge from Luis branch (use distutils better)
    Revision:
      itools--main--0.7--patch-20

    Patches applied:
    
     * luis@itaapy.com--private/itools--luis--0.7--base-0
       tag of jdavid@itaapy.com--public/itools--main--0.7--patch-16
    
     * luis@itaapy.com--private/itools--luis--0.7--patch-1
       Add a commented line to allow a documentation with less pages
    
     * luis@itaapy.com--private/itools--luis--0.7--patch-2
       add a Changelog file in the source tree
    
     * luis@itaapy.com--private/itools--luis--0.7--patch-3
       Add the Changelog file in the './site-paquages/itools' Folder
    
     * luis@itaapy.com--private/itools--luis--0.7--patch-4
       Add documentation to setup.py and do clean reindent
    
     * luis@itaapy.com--private/itools--luis--0.7--patch-5
       Improve the MANIFEST.in (no more warnings in 'python setup.py sdist') 
    

    new files:
     .arch-ids/Changelog.id Changelog

    modified files:
     MANIFEST.in doc/itools.tex setup.py

    new patches: