@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.7
 #
 
+2005-02-21 20:08:39 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-23
+
+    Summary:
+      resources, add file like interface (read)
+    Revision:
+      itools--main--0.7--patch-23
+
+
+    modified files:
+     Changelog resources/base.py
+
+
 2005-02-21 17:03:36 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-22
 
     Summary:
